--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "sentry-example",
+  "name": "explore",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "report-json": "vue-cli-service build --report-json",
+    "report": "vue-cli-service build --report",
+    "show-webpack-config": "vue inspect > ./build/webpack.config.js",
+    "dll": "webpack --config ./build/webpack.dll.config"
   },
   "dependencies": {
     "@sentry/tracing": "^6.11.0",
@@ -31,7 +35,8 @@
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-cli": "^4.7.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
